--- a/inc/css/els-slider.css
+++ b/inc/css/els-slider.css
@@ -1,13 +1,3 @@
-/* .els-logo-slider {
-    display: flex;
-    overflow: hidden;
-    width: 100%; */
-/* } */
-
-/* .els-logo-item {
-    padding: 10px;
-    text-align: center;
-} */
 .logo-v-center .slick-track{
     display: flex!important;
     align-items: center!important;
@@ -24,4 +14,12 @@
     padding: 6px!important;
     background: #000000!important;
     border-radius: 50%!important;
+}
+@media (max-width: 768px) {
+    .slick-prev{
+        left: 0px!important;
+    }
+    .slick-next{
+        right: 0px!important;
+    }
 }
